--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,22 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+	    <exclusions>
+                <exclusion>
+                    <groupId>ch.qos.logback</groupId>
+                    <artifactId>logback-classic</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
+	    <exclusions>
+                <exclusion>
+                    <groupId>ch.qos.logback</groupId>
+                    <artifactId>logback-classic</artifactId>
+                </exclusion>
+    	    </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -67,6 +79,15 @@
             <id>geotools</id>
             <url>http://download.osgeo.org/webdav/geotools/</url>
         </repository>
+    	<repository>
+      	    <id>osgeo-alt</id>
+      	    <url>https://repo.osgeo.org/repository/release/</url>
+ 	</repository>
+ 	<repository>
+       	    <id>geomajas</id>
+       	    <name>Geomajas Maven Repository</name>
+       	    <url>http://maven.geomajas.org/(http://maven.geomajas.org/)</url>
+ 	</repository>
     </repositories>
 
     <build>
